--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@babel/plugin-transform-modules-commonjs": "^7.21.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/register": "^7.21.0",
+    "@sendbird/chat": "^4.8.1",
+    "@sendbird/uikit-react": "^3.4.7",
     "acorn-jsx": "^5.3.2",
     "acorn-loose": "^8.3.0",
     "babel-loader": "8.3.0",
@@ -38,6 +40,7 @@
     "prettier": "1.19.1"
   },
   "scripts": {
+    "postinstall": "npx patch-package",
     "start": "concurrently \"npm run server:dev\" \"npm run bundler:dev\"",
     "start:prod": "concurrently \"npm run server:prod\" \"npm run bundler:prod\"",
     "server:dev": "cross-env NODE_ENV=development nodemon -- --conditions=react-server server",
